--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "flowbite-react": "^0.10.2",
+    "lottie-react": "^2.4.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
